# libusb

./: .THIS BRANCH HAS BEEN SUPESEDED BY LIBUSBX.txt  .clang-format  .clang-tidy  .codespellrc  .editorconfig  .editorconfig-checker.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  AGENTS.md  AUTHORS  BUGS  BUILD  CMakeLists.txt  ChangeLog  GEMINI.md  HACKING  INSTALL_WIN.txt  KEYS  Makefile.am  Makefile.in  NEWS  README  README.git  README.md  README_MSVC.txt  RELEASE-NOTES  TODO  _README.txt  _bd.cmd  _bm.sh  _bump.sh  _libusb_2008.sln  _libusb_2010.sln  _libusb_dll_2008.vcproj  _libusb_dll_2010.vcxproj  _libusb_dll_2010.vcxproj.filters  _libusb_static_2008.vcproj  _libusb_static_2010.vcxproj  (+56 more)
.claude/: CLAUDE.md
.github/: cifuzz.yml  copilot-instructions.md
.github/workflows/: android.yml  cifuzz.yml  codeql.yml  cygwin.yml  increment-nano.yml  linux.yml  macos.yml  msvc.yml  msys2.yml  msys2_clang32.yml  msys2_clang64-aarch64.yml  msys2_clang64.yml  windows.yml
.private/: .gitattributes  README.txt  appveyor_build.sh  bd.cmd  bm.sh  bwince.cmd  ci-build.sh  ci-container-build.sh  post-rewrite.sh  pre-commit.sh  wbs.txt  wbs_wince.txt
Xcode/: common.xcconfig  config.h  debug.xcconfig  libusb.xcconfig  libusb_debug.xcconfig  libusb_release.xcconfig  libusbx.xcconfig  libusbx_debug.xcconfig  libusbx_release.xcconfig  release.xcconfig
Xcode/libusb.xcodeproj/: project.pbxproj
Xcode/libusbx.xcodeproj/: project.pbxproj
android/: README  README.md  autogen.sh  config.h  install2testapp
android/examples/: unrooted_android.c  unrooted_android.h
android/jni/: Android.mk  Application.mk  examples.mk  libusb.mk  tests.mk
android/test_app/: AndroidManifest.xml  README.md  ant.properties  build.xml  project.properties  test_app_jni.xml
android/test_app/jni/: Android.mk  Application.mk  D2XX_download.mk  D2XX_tests.mk  ch340.c  ch34x_tests.mk  examples.mk  info_libusb_test_app_Jaemon.h  jaemon.c  jaemon.h  jaemon.mk  libftdi.mk  libftdi_tests.mk  libusb.mk  tests.mk
build-aux/: gen-describe.ps1  gen-describe.sh
cmake/: CMakeLists.txt  config.h.in
doc/: Makefile.am  Makefile.in  doxygen.cfg  doxygen.cfg.in
examples/: .gitattributes  CMakeLists.txt  Makefile.am  Makefile.in  _lsusb_2008.vcproj  _lsusb_2010.vcxproj  _lsusb_2010.vcxproj.filters  _smuc_2008.vcproj  _xusb_2008.vcproj  _xusb_2010.vcxproj  _xusb_2010.vcxproj.filters  debug.sh  deploy.sh  dpfp.c  dpfp_threaded.c  ezusb.c  ezusb.h  fxload.c  hotplug_fallback.cc  hotplugtest.c  listdevs.c  lsusb.c  lsusb.dsp  lsusb.vcproj  lsusb_2005.vcproj  lsusb_2008.vcproj  lsusb_sources  makefile  run.sh  sam3u_benchmark.c  smuc.c  testlibusb.c  xusb.c  xusb.dsp  xusb.vcproj  xusb_2005.vcproj  xusb_2008.vcproj  xusb_sources
libfpusb/: Makefile.am  core.c  descriptor.c  fpusb.h  fpusbi.h  io.c  signalfd.h  usbfs.h
libusb/: .core.c.swo  CMakeLists.txt  LibUsbConfig.cmake.in  Makefile.am  Makefile.am.extra  Makefile.in  clang_thread_safety.h  config.cmake  config.h.cmake  core.c  descriptor.c  hotplug.c  hotplug.h  interrupt.c  interrupt.h  io.c  libusb-1.0.def  libusb-1.0.rc  libusb-1.0.rc.in  libusb.h  libusb_version.h  libusb_version.h.in  libusbi.h  libusbi.h.in  signalfd.h  strerror.c  sync.c  usbfs.h  version.h  version_nano.h
libusb/os/: CMakeLists.txt  android_usbfs.c  android_usbfs.h  darwin_usb.c  darwin_usb.h  driver_install.c  driver_install.h  driver_installer.c  driver_installer.h  emscripten_webusb.cpp  events_cpp_stl.cpp  events_cpp_stl.h  events_posix.c  events_posix.h  events_windows.c  events_windows.h  haiku_pollfs.cpp  haiku_usb.h  haiku_usb_backend.cpp  haiku_usb_raw.cpp  haiku_usb_raw.h  libusb_sources  linux_android_jni.c  linux_android_jni.h  linux_netlink.c  linux_udev.c  linux_usbfs.c  linux_usbfs.h  netbsd_usb.c  nto_qnx_usbfs.c  nto_qnx_usbfs.h  null_usb.c  openbsd_usb.c  poll_posix.c  poll_posix.h  poll_windows.c  poll_windows.h  sources  sunos_usb.c  sunos_usb.h  (+26 more)
libusb/os/driver/: abort_endpoint.c  claim_interface.c  clear_feature.c  common.rc  dispatch.c  driver_api.h  driver_debug.c  driver_debug.h  driver_registry.c  get_configuration.c  get_descriptor.c  get_interface.c  get_status.c  ioctl.c  libusb_driver.c  libusb_driver.h  libusb_driver_rc.rc  pnp.c  power.c  release_interface.c  reset_device.c  reset_endpoint.c  set_configuration.c  set_descriptor.c  set_feature.c  set_interface.c  sources  temp  transfer.c  usbd.def  usbdlib_gcc.h  vendor_request.c
libusb/os/haiku/: Makefile.am  configure.ac  haiku_usb.h  haiku_usb_backend.cpp  haiku_usb_raw.cpp
libusbx.xcodeproj/: project.pbxproj
msvc/: .gitattributes  Base.props  Configuration.Base.props  Configuration.DynamicLibrary.props  ProjectConfigurations.Base.props  appveyor.bat  build_all.ps1  config.h  ddk_build.cmd  dpfp.vcxproj  dpfp_2013.vcxproj  dpfp_2015.vcxproj  dpfp_2017.vcxproj  dpfp_2017.vcxproj.filters  dpfp_2019.vcxproj  dpfp_2022.vcxproj  dpfp_2022.vcxproj.filters  dpfp_threaded.vcxproj  dpfp_threaded_2013.vcxproj  dpfp_threaded_2013.vcxproj.filters  dpfp_threaded_2015.vcxproj  dpfp_threaded_2017.vcxproj  dpfp_threaded_2019.vcxproj  dpfp_threaded_2022.vcxproj  dpfp_threaded_2022.vcxproj.filters  driver_resources.rc  errno.h  fxload.vcxproj  fxload_2010.vcxproj  fxload_2012.vcxproj  fxload_2013.vcxproj  fxload_2013.vcxproj.filters  fxload_2015.vcxproj  fxload_2017.vcxproj  fxload_2019.vcxproj  fxload_2022.vcxproj  fxload_2022.vcxproj.filters  fxload_sources  getopt.vcxproj  getopt_2010.vcxproj  (+148 more)
msvc/getopt/: features.h  getopt.c  getopt.h  getopt1.c  getopt_int.h  gettext.h  unistd.h
msvc/getopt/bits/: getopt_core.h  (+1 more)
msvc/installer/: libusb.wxs  libusb_installer.wixproj
msvc/pthread-win32_x64/: pthread-win32.sln  pthread-win32.vcproj
tests/: CMakeLists.txt  Makefile.am  Makefile.in  init_context.c  libusb_testlib.h  libusbx_testlib.h  macos.c  set_option.c  stress.c  stress_mt.c  testcore.c  testlib.c  umockdev.c
tests/fuzz/: fuzz_bos_descriptor.c  fuzz_descriptor_parsers.c
tests/fuzz/corpus/bos/: min.bos
tests/webusb-test-shim/: index.js  package-lock.json  package.json
(+8 files in other folders)
